--- a/.github/workflows/build_pr_documentation.yml
+++ b/.github/workflows/build_pr_documentation.yml
@@ -1,16 +1,9 @@
 name: Build PR Documentation
-
 on:
-  pull_request:
-    paths:
-      - 'docs/source/**'
-      - 'assets/**'
-      - '.github/workflows/doc-pr-build.yml'
-
+  workflow_dispatch: {}
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
-
 jobs:
   build:
     uses: huggingface/doc-builder/.github/workflows/build_pr_documentation.yml@main
@@ -19,4 +12,3 @@ jobs:
       pr_number: ${{ github.event.number }}
       package: smolagents
       languages: en hi ko zh
-      # additional_args: --not_python_module # use this arg if repository is documentation only
