--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,31 +1,24 @@
 name: Quality Check
-
-on: [pull_request]
-
+on:
+  workflow_dispatch: {}
 env:
   UV_SYSTEM_PYTHON: 1
-
 jobs:
   check_code_quality:
     runs-on: ubuntu-latest
     env:
-      UV_HTTP_TIMEOUT: 600 # max 10min to install deps
-
+      UV_HTTP_TIMEOUT: 600
     steps:
-      - uses: actions/checkout@v6
-      - name: Set up Python
-        uses: actions/setup-python@v6
-        with:
-          python-version: "3.12"
+    - uses: actions/checkout@v6
+    - name: Set up Python
+      uses: actions/setup-python@v6
+      with:
+        python-version: '3.12'
+    - name: Setup uv
+      run: 'pip install --upgrade uv
 
-      # Setup venv
-      - name: Setup uv
-        run: |
-          pip install --upgrade uv
-
-      - name: Install dependencies
-        run: uv pip install "smolagents[quality] @ ."
-
-      # Equivalent of "make quality" but step by step
-      - run: ruff check examples src tests  # linter
-      - run: ruff format --check examples src tests  # formatter
+        '
+    - name: Install dependencies
+      run: uv pip install "smolagents[quality] @ ."
+    - run: ruff check examples src tests
+    - run: ruff format --check examples src tests
