--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,43 +1,34 @@
 name: Python tests
-
 on:
-  pull_request:
-  push:
-    branches:
-      - ci-*
-
+  workflow_dispatch: {}
 env:
   UV_SYSTEM_PYTHON: 1
-
 jobs:
   build-ubuntu:
     runs-on: ubuntu-latest
     env:
-      UV_HTTP_TIMEOUT: 600 # max 10min to install deps
-
+      UV_HTTP_TIMEOUT: 600
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10", "3.12"]
-
+        python-version:
+        - '3.10'
+        - '3.12'
     steps:
-      - uses: actions/checkout@v6
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v6
-        with:
-          python-version: ${{ matrix.python-version }}
+    - uses: actions/checkout@v6
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v6
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Setup uv
+      run: 'pip install --upgrade uv
 
-      # Setup venv
-      - name: Setup uv
-        run: |
-          pip install --upgrade uv
+        '
+    - name: Install dependencies
+      run: 'uv pip install "smolagents[test] @ ."
 
-      # Install dependencies
-      - name: Install dependencies
-        run: |
-          uv pip install "smolagents[test] @ ."
+        '
+    - name: Test with pytest
+      run: 'pytest ./tests/
 
-      # Run tests
-      - name: Test with pytest
-        run: |
-          pytest ./tests/
+        '
